--- a/TestRun/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestRun/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,9 +151,10 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/TestRun
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1083,4 +1084,7 @@ NewLevelDialog.TimeStamp=2023.02.07-17.00.06
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.02.07-16.59.43
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[ContentBrowserRecent]
+MRUItem0=/Game/TestRun
 
