Revert "made some changes"
This reverts commit b6799e187ac8713d1d06a5616f29d54c5a0cf889.

--- a/TestRun/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestRun/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,10 +151,9 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/TestRun
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1084,7 +1083,4 @@ NewLevelDialog.TimeStamp=2023.02.07-17.00.06
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.02.07-16.59.43
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-
-[ContentBrowserRecent]
-MRUItem0=/Game/TestRun
 
